[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/SideWall.png" type="Texture" id=1]
[ext_resource path="res://Scripts/IllusoryWall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 24 )

[node name="IllusorySideWall" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FadeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FadeArea"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 24 )
shape = SubResource( 2 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="FadeArea" to="." method="_on_FadeArea_area_entered"]
[connection signal="area_exited" from="FadeArea" to="." method="_on_FadeArea_area_exited"]
[connection signal="body_entered" from="FadeArea" to="." method="_on_FadeArea_body_entered"]
[connection signal="body_exited" from="FadeArea" to="." method="_on_FadeArea_body_exited"]
